# solo-apprunner

./: CMakeLists.txt  README.MD
data/: app.config  config.xml
include/: SoAppManager.h  SoAppRunnerExport.h  SoProgram.h  SoProgramGroup.h
include/SoAppRunner/: SoAppManager.h  SoProgram.h  SoProgramGroup.h
include/SoAppRunner.Desktop/: SoAppManagerWidget.h  SoAppRunnerDesktopExport.h  SoCustomLabel.h  SoCustomWidget.h  SoProgramGroupWidget.h  SoProgramWidget.h
scripts/win32/: make-dist.nsi
src/: CMakeLists.txt  SoAppManager.cpp  SoProgram.cpp  SoProgramGroup.cpp
src/SoAppRunner/: CMakeLists.txt  SoAppManager.cpp  SoProgram.cpp  SoProgramGroup.cpp
src/SoAppRunner.Desktop/: CMakeLists.txt  SoAppManagerWidget.cpp  SoCustomLabel.cpp  SoCustomWidget.cpp  SoProgramGroupWidget.cpp  SoProgramWidget.cpp
test/: CMakeLists.txt  apprunner.cpp
test/AppRunner/: BannerWidget.cpp  BannerWidget.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  apprunner.cpp
test/Python/: StartPython.bat  TestQXmlStreamReader.py  app.config  app.xml
